Fix weak shared ptr deref for some layer updates

Convert ithe image weak shared ptr to strong reference and properly
check for null before accessing its members.

Fixes regression from 205731b2aa5ab530cbd145cb32dac4796bac23a3.

BUG:471391